Bump spring-cloud-starter-openfeign to 4.3.1 (#2898)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>